force-app/main/default/objects/Triggers__c/Triggers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuração para ativação/desativação da trigger</description>
    <label>Triggers</label>
</CustomObject>