force-app/main/default/objects/Triggers__c/fields/Duplicidade_conta__c.field-meta.xml
<CustomField>
    <fullName>Duplicidade_conta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger &quot;DuplicidadeConta&quot;</description>
    <label>Duplicidade conta</label>
    <type>Checkbox</type>
</CustomField>