force-app/main/default/objects/Triggers__c/fields/Duplicidade_lead__c.field-meta.xml
<CustomField>
    <fullName>Duplicidade_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define se verificação de duplicidade de Lead será realizada</description>
    <inlineHelpText>Define se verificação de duplicidade de Lead será realizada</inlineHelpText>
    <label>Duplicidade lead</label>
    <type>Checkbox</type>
</CustomField>