force-app/main/default/objects/Triggers__c/fields/Estudo_base__c.field-meta.xml
<CustomField>
    <fullName>Estudo_base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estudo base</label>
    <type>Checkbox</type>
</CustomField>