force-app/main/default/objects/Triggers__c/fields/Trigger_conta__c.field-meta.xml
<CustomField>
    <fullName>Trigger_conta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validação para rodar a Trigger_conta</description>
    <label>Trigger conta</label>
    <type>Checkbox</type>
</CustomField>