force-app/main/default/objects/Triggers__c/fields/Trigger_contato__c.field-meta.xml
<CustomField>
    <fullName>Trigger_contato__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validação para rodar a Trigger_contato</description>
    <label>Trigger contato</label>
    <type>Checkbox</type>
</CustomField>