force-app/main/default/objects/Triggers__c/fields/Trigger_historico_OS__c.field-meta.xml
<CustomField>
    <fullName>Trigger_historico_OS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger historico OS</label>
    <type>Checkbox</type>
</CustomField>