force-app/main/default/objects/Triggers__c/fields/Trigger_lead__c.field-meta.xml
<CustomField>
    <fullName>Trigger_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validação para rodar a Trigger_lead</description>
    <inlineHelpText>Validação para rodar a Trigger_lead</inlineHelpText>
    <label>Trigger lead</label>
    <type>Checkbox</type>
</CustomField>