force-app/main/default/objects/Triggers__c/fields/Trigger_oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Trigger_oportunidade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KCA-9</description>
    <label>Trigger oportunidade</label>
    <type>Checkbox</type>
</CustomField>