force-app/main/default/objects/Triggers__c/fields/Trigger_ordem_servico__c.field-meta.xml
<CustomField>
    <fullName>Trigger_ordem_servico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger ordem de serviço</label>
    <type>Checkbox</type>
</CustomField>